Created template student page and update class for db

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-aa1c9151-6005-448f-af12-b081e097c9bd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
